fixed a emoji popup and added missing selector
fixed emoji thingy and added new styles for a selector that are hidden under 1000 layers, yw guys

--- a/tokyo_midnight.css
+++ b/tokyo_midnight.css
@@ -2282,14 +2282,14 @@ background-color: var(--tokyo-midnight-icons);
 }
 
 /* === MESSAGE REACTION MENU === */
-.popover_f84418 {
+.popover_f84418.popover_f84418 {
   background-color: var(--tokyo-midnight-bg-sidebars);
   border: 2px solid var(--tokyo-midnight-green);
   filter: drop-shadow(0 0 10px rgba(29, 202, 58, 0.485));
   }
 
   /* === MESSAGE REACTION MENU - HOVER === */
-.popover_f84418:hover {
+.popover_f84418.popover_f84418:hover {
   background-color: var(--tokyo-midnight-bg-sidebars);
   border: 2px solid var(--tokyo-midnight-green2);
   filter: drop-shadow(0 0 10px rgba(10, 167, 44, 0.558));
@@ -4069,4 +4069,99 @@ a.anchor_edefb8:active * {
 
 .scroller__6b0e0 {
     background: linear-gradient(90deg, #091223 0%, #191728 100%) !important;
+}
+
+.pinIcon__08166 {
+    background-color: rgb(103, 245, 115);
+}
+
+.pinIcon__08166 svg > path {
+    fill: #19181b !important;
+}
+
+.shop__08415 {
+    background: linear-gradient(180deg, #000323 0%, rgb(0, 0, 47) 50%, #020114 100%);
+}
+
+.productCardContainer_fcbddd {
+    background: linear-gradient(180deg, #05001e 0%, #030321 100%);
+}
+
+.footerGradient_fcbddd {
+    background: linear-gradient(180deg, #0206445c 0%, #010020bb 100%) !important;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    backdrop-filter: blur(2px);
+    height: 100px
+}
+
+.card_eafb9c {
+    background-color: #08080b;
+    border: 2px solid rgba(84, 220, 104, 0.647) !important;
+}
+
+.cozy_c19a55 .repliedMessageClickableSpine_c19a55 {
+    border-color: rgb(94, 231, 121) !important;
+}
+
+.joinButton_e2d7b8 > button {
+    background: linear-gradient(90deg, #69de6b 0%, rgba(13, 125, 28, 0.703) 100%);
+    box-shadow: 0 0 10px 2px hwb(113 35% 8% / 0.438);
+    border: 1px solid #55af4b86;
+}
+
+.joinButton_e2d7b8 .buttonChildren_a22cb0 span {
+    color: rgb(5, 0, 26) !important;
+    font-weight: 700;
+}
+
+/* === EVENT NAME === */ 
+.eventName_e2d7b8 { /* changes the color of the event name... duh.. */
+    color: rgb(150, 240, 163) !important;
+}
+
+.container__8a031 .critical-primary_a22cb0 {
+    background: linear-gradient(90deg, #841626 0%, #480913 100%) !important;
+    border: 2px solid rgb(90, 45, 45) !important;
+    color: rgb(1, 1, 34) !important;
+}
+
+.container__8a031 .actionBar__8a031 button.secondary_a22cb0 {
+    background: linear-gradient(90deg, #31a828 0%, #024707 100%) !important;
+    border: 2px solid rgb(51, 178, 51);
+}
+
+.theme-dark .staticToolbar_bba883 {
+    background-color: rgb(14, 15, 19) !important;
+    border-top: 1px solid rgba(30, 126, 40, 0.381);
+    border-left: 1px solid rgba(30, 126, 40, 0.381);
+    border-right: 1px solid rgba(30, 126, 40, 0.381);
+}
+
+.container__5d756 {
+    background-color: rgb(14, 14, 18);
+    border: 1px solid rgb(38, 79, 49);
+}
+
+.coverageHeader_e34850 {
+    background-color: rgb(14, 14, 18);
+    border: 1px solid rgb(38, 79, 49);
+    border-radius: 10px;
+}
+
+.container__4a4f2 {
+    background: linear-gradient(90deg, #050715 0%, #000116 100%);
+}
+
+.next__4a4f2 {
+    border: 1px solid rgb(1, 3, 39);
+    background: linear-gradient(90deg, #000701 0%, #002208 100%);
+    border-radius: 8px;
+}
+
+/* === BANS === */
+.scrollerContainer__4b8d8 {
+    background-color: rgb(0, 3, 18);
+    border: 2px dotted rgb(24, 23, 74);
+    border-radius: 10px;
 }
